ghc-4335c07/testsuite/tests/safeHaskell/safeInfered/UnsafeInfered12.stderr

UnsafeInfered12.hs:2:16: error: [-Wunsafe, -Werror=unsafe]
    ‘UnsafeInfered12’ has been inferred as unsafe!
    Reason:
        UnsafeInfered12.hs:1:14:
            -XTemplateHaskell is not allowed in Safe Haskell
