ghc-4335c07/testsuite/tests/safeHaskell/safeInfered/UnsafeInfered12.hs
{-# LANGUAGE TemplateHaskell #-}
{-# OPTIONS_GHC -fwarn-unsafe -Werror #-}
module UnsafeInfered12 where

a :: Int
a = 1

